@@ -1,2 +1,3 @@
 DIST ovirt-iso-uploader-3.2.1.tar.gz 354144 SHA256 89f3dc21674f7f398452920acb6e3edc9dec137bb1941382037a86eb623af11c SHA512 881ec9a49e72e179be89abe5ccf41b728d003002fbd86a271a1ab44fbce0d9f4f73fd050676d2820e2a598076525ae5ee414d08aa2b40509be56ea4581a2adc0 WHIRLPOOL d00353eb9ff816877c3c500ae0a07036e5c36ce6095ad0751dbc1cff126f0bd9a8cd12dff8f854f5eb9d11f13cd03ce3822526052919ac247af435afdeb421e1
 DIST ovirt-iso-uploader-3.4.0.tar.gz 184306 SHA256 a6037658f7f75feaddea939b38820bf97fb915bfdb6c8b320a936ad8daac8c80 SHA512 dc6cbe18913e0fb8ff5000c0fc61caa3ffdd7e20dcd519dadc8fd3729d77c7236d4260e00272914ac8e512057ad9a1a1afb51e1f4d539c43c22a104dba1ecc76 WHIRLPOOL f211781744efefa1076212a987f7d72198ef53a350b55c05ce1083bb9d7204a5e6e1ea400645645fc4567d2c5b431bfbdebdc4f3414b520268b367df7722ce7a
+DIST ovirt-iso-uploader-3.4.1.tar.gz 186917 SHA256 817c5694af3422fc72a5818c795367e46fbbafed4a36b2ad43689565db446667 SHA512 07935362e75a20a84ae1816c31696e3897eb9f535f96c8fdc2db466e8d95cb9ee0b170309efa7cf099b2935ebe437544adb732615beb2e52d59086d1ff4cf8dd WHIRLPOOL 2615a8a25d7d227260f0a521c8c92db8ea4b6e863c2bc5a17371f8f10f4b3444fd872e529a02e9c441ccccdbc120d31ee1d625b099a2464fdc8eff95dde85b72
